# SSSTN

./: .gitignore  AR_first_exploration_overfitting.py  A_first_exploration_overfitting.py  BR_train_test_conventional_cycle.py  BRsr_train_test_conventional_cycle.py  BRxg_train_test_conventional_cycle.py  B_train_test_conventional_cycle.py  Bxg_train_test_conventional_cycle.py  CR_overfitting_multi_init_cycle.py  CRxg_overfitting_multi_init_cycle.py  C_overfitting_multi_init_cycle.py  Cxg_overfitting_multi_init_cycle.py  D_partial_corruption_multi_init_cycle.py  README.md  pyproject.toml
engine/: sr_trainer.py  trainer.py  xgb_trainer.py
models/: basic_mlp.py
notebooks/: Looking_trajectories.ipynb  hamming_significance.ipynb  optimization_analysis.ipynb  optimization_analysis_regression.ipynb  pooled_measures_by_model.py  selecting_metrics_across_models.ipynb  selecting_metrics_from_randomization.ipynb
scripts_for_figures/: corruption_sweep.py  real_algo_comparison.py  real_vs_random_split.py  runs_sweep.py  threshold_sweep.py
src/stn/: __init__.py  __main__.py  build.py  io.py  label_metrics.py  location.py  metrics.py  nx_metrics.py  plot.py
utilities/: build_perf_tables.py  data.py  results_table.py  summarize_results.py
