[project]
name = "ae-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "openml>=0.14.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.0.0",
    "pandas>=2.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "imageio>=2.37.3",
    "ipython>=9.13.0",
    "seaborn>=0.13.2",
    "black[jupyter]>=26.5.1",
    "umap-learn>=0.5.12",
    "igraph>=1.0.0",
    "networkx[default]>=3.6.1",
    "pysr>=1.5.10",
    "einops>=0.8.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
